Корректировки #4